opneapiによるschema実装の組み込み
